Alignment issue in choose workspace screen fix

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -911,10 +911,11 @@ font-weight: 600;
   color: #937206;
 }
 .sectorssText{
-  font-size: 24px;
-line-height: 36px;
-font-weight: 600;
-color: #BAB8B2;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 600;
+  color: #BAB8B2;
+  padding-top: 10px;
 }
 .pinIcon{
   position: relative;
